--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "d3": "^7.9.0",
     "d3-brush": "^3.0.0",
     "d3-geo": "^3.1.1",
     "d3-scale": "^4.0.2",
     "d3-transition": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
